[package]
name = "small-world-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6.6"
